# LangChain

./: pyproject.toml
Currency_Converter_tool/: main.py
DocumentLoader/: youtubetranscript.py
Langchain_chains/: parallel_chains.py  series_chains.py
Langchain_output_parsers/: jsonoutputparser.py  pydantic_output_parser.py  stroutputparser.py  stroutputparser1.py
Langchain_prompts/: chatbot.py  prompts.py
RAG/: rag.py  ragchain.py
RAG/chroma_langchain_db/77915f4a-9dd3-4ed8-b596-664800a399c8/: index_metadata.pickle
Runnables/: without_runnables.py
TextSplitter/: langchain-text-splitter.py  recursive1.py  recursive2.py
VectorStore/: langchain_vector.py
VectorStore/chroma_langchain_db/: chroma.sqlite3
Video RAG/: embedding_and_store.py  frame_extractor.py  query_with_llm.py
Video RAG/local_visual_db/: chroma.sqlite3
chroma_langchain_db/: chroma.sqlite3
primitive_Runnables/: Runnablebranch.py  Runnableparallel.py  Runnablepassthrough.py  Runnablesquence.py
typical_Runnables/: with_runnables.py
