[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "LangChain + Ollama setup using uv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-ollama",
    "grandalf>=0.8",
    "pypdf>=6.7.2",
    "youtube-transcript-api>=1.2.4",
    "pytube>=15.0.0",
    "langchain-chroma>=1.1.0",
    "python-dotenv>=1.2.1",
]

