[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "LangChain + Ollama setup using uv"
readme = "README.md"
requires-python = ">=3.10, <3.13"

dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-ollama",
    "grandalf>=0.8",
    "pypdf>=6.7.2",
    "youtube-transcript-api>=1.2.4",
    "pytube>=15.0.0",
    "langchain-chroma>=1.1.0",
    "python-dotenv>=1.2.1",
    "opencv-python>=4.13.0.92",
    "chromadb>=1.5.1",
    "open-clip-torch>=3.3.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
